<resources>
    <string name="app_name">TakeMeLegends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_logout">Desconectar</string>

    <string name="logros_ganados">Logros ganados</string>
    <string name="cangeados">Premios canjeados</string>

    <string name="text_welcome_user">¡Bienvenido! Selecciona tus preferencias</string>
    <string name="text_main_preferences">Categorías de eventos</string>
    <string name="text_location">Ciudades de interés</string>
    <string name="text_your_preferences">Tus categorías:</string>
    <string name="text_all_preferences">Todas las categorías:</string>
    <string name="text_your_cities">Tus ciudades:</string>
    <string name="text_all_cities">Todas las ciudades:</string>

    <string name="text_timetable">Horario</string>
    <string name="text_timetable_monday_to_thursdays">Ver eventos entre semana (Lunes - Jueves)</string>
    <string name="text_timetable_friday_to_sundays">Ver eventos en fin de semana (Viernes - Domingos)</string>
    <string name="text_timetable_prefered">Horario de preferencia</string>
    <string name="preferences_music">Música</string>
    <string name="preferences_conference">Conferencias</string>
    <string name="preferences_comedy">Comedia</string>
    <string name="preferences_learning_education">Educación</string>
    <string name="preferences_family_fun_kids">Familia</string>
    <string name="preferences_festivals_parades">Festivales</string>
    <string name="preferences_movies_film">Cine</string>
    <string name="preferences_food">Gastronomía</string>
    <string name="preferences_fundraisers">Recaudación</string>
    <string name="preferences_art">Arte</string>
    <string name="preferences_support">Salud</string>
    <string name="preferences_holiday">Vacaciones</string>
    <string name="preferences_books">Lectura</string>
    <string name="preferences_attractions">Museos</string>
    <string name="preferences_community">Comunidad</string>
    <string name="preferences_business">Negocio</string>
    <string name="preferences_singles_social">Nightlife</string>
    <string name="preferences_schools_alumni">Universidad</string>
    <string name="preferences_clubs_associations">Clubs</string>
    <string name="preferences_outdoors_recreation">Aire libre</string>
    <string name="preferences_performing_arts">Artes escénicas</string>
    <string name="preferences_animals">Animales</string>
    <string name="preferences_politics_activism">Política</string>
    <string name="preferences_sales">Ventas</string>
    <string name="preferences_science">Ciencia</string>
    <string name="preferences_religion_spiritualism">Religión</string>
    <string name="preferences_sports">Deportes</string>
    <string name="preferences_technology">Tecnología</string>
    <string name="preferences_others">Otros</string>
    <string name="preferences_skip">Omitir</string>
    <string name="preferences_save">Guardar</string>
    <string name="preferences_all_cities">Todas las ciudades</string>
    <string name="preferences_title">Preferencias</string>
    <string name="preferences_select">Seleccionar</string>
    <string name="preferences_select_categories">Seleccionar categorías</string>
    <string name="preferences_select_cities">Seleccionar ciudades</string>

    <string name="success_asistire">Disfruta del evento!</string>
    <string name="failure_asistire">Upps, algo ha ido mal! Vuelve a intentarlo más tarde.</string>
    <string name="assistance_error">No puedes no asistir a un evento al cual ya has asistido.</string>

    <string name="settings">Preferencias</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="buscar_eventos">Buscar eventos</string>
    <string name="exchange">Cambiar takes</string>
    <string name="my_events">Mis eventos</string>
    <string name="todos">Todos</string>
    <string name="asistire">Asistiré</string>
    <string name="recomendados">Recomendados</string>

    <string name="access">Acceder con</string>
    <string name="login_with">Login with</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google</string>
    <string name="login_twitter">Twitter</string>
    <string name="login_success">Sesión iniciada correctamente!</string>
    <string name="login_fail">No se ha podido iniciar sesión.</string>

    <string name="button_asistire">Asistiré</string>
    <string name="text_date">Fecha</string>
    <string name="text_time">Hora</string>
    <string name="text_adress">Dirección</string>

    <string name="text_historial">Historial</string>
    <string name="text_check_in">Check-in</string>
    <string name="btn_text_check_in">Check in</string>
    <string name="text_was_at_time">Realizado a las:</string>
    <string name="text_historic">Historial</string>
    <string name="text_no_reward_obtained">Recompensa no adquirida</string>
    <string name="text_from">De</string>
    <string name="text_to">a</string>

    <string name="profile_error">Error obteniendo datos.</string>
    <string name="profile_god_mode_on">God Mode ON</string>
    <string name="profile_god_mode_off">God Mode OFF</string>

    <string name="login">Log In</string>
    <string name="event_details">Detalles del evento</string>
    <string name="filters_text">Filters</string>

    <string name="facebook_app_id">306462863070758</string>

    <string name="fb_login_protocol_scheme">fb306462863070758</string>

    <string name="error">Error</string>
    <string name="no_assitire_events">No has marcado ningún evento al que asistir.</string>
    <string name="no_tots_events">No hay ningún evento que mostrar.</string>
    <string name="no_recomenats_events">No tenemos ningún evento que recomendarte.</string>
    <string name="no_historial_events">No has acudido a ningún evento.</string>
    <string name="no_logros">Aún has conseguido ningún logro.</string>
    <string name="no_rewards">No has canjeado ninguna recompensa.</string>
    <string name="logout_app">Vuelve a pulsar atrás para desconectarte</string>
    <string name="cant_delete">No puedes haces esta acción si ya se ha hecho check-in al evento.</string>
    <string name="reward_exchange">Canjear recompensa</string>
    <string name="rewards">Recompensas</string>
    <string name="reward_cost">Coste:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="text_lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
