<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_lupe_white"
            android:title="@string/buscar_eventos"
            android:checked="true"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_profile_white"
            android:title="@string/mi_perfil" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_market_white"
            android:title="@string/exchange" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_calendar_white"
            android:title="@string/eventos" />
    </group>

</menu>
